--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "three": "^0.115.0"
+    "three": "^0.115.0",
+    "three-orbitcontrols": "^2.110.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
