--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "echarts": "^4.7.0",
     "echarts-for-react": "^2.0.15-beta.1",
     "echarts-gl": "^1.1.1",
+    "echarts-liquidfill": "^2.0.5",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "react": "^16.13.1",
